--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <h1>Hier auswählen</h1>
 
     <footer>
-        <p>&copy; 2025 HTML und CSS lernen by Myneyy</p>
+        <p>&copy; 2025 by M</p>
     </footer>
 </body>
 
