--- a/shortcuts.html
+++ b/shortcuts.html
@@ -274,7 +274,7 @@
     </ul>
 
     <footer>
-        <p>&copy; 2025 HTML und CSS lernen by Myneyy</p>
+        <p>&copy; 2025 by M</p>
     </footer>
 </body>
 
